Added Samples pages

--- a/DataMan/Records/templates/archive.html
+++ b/DataMan/Records/templates/archive.html
@@ -3,6 +3,10 @@
 {% block content %}
 <h1>Archives</h1>
 <p>
-    Placeholder
+    Placeholder<br>
+    eventual list<br>
+    of cool things.
+    <br><br><br>
+    <a href="{% url 'samples' %}">Samples</a>
 </p>
 {% endblock %}
