--- a/DataMan/Records/templates/generic.html
+++ b/DataMan/Records/templates/generic.html
@@ -17,6 +17,8 @@
                     <li><a href="">Home</a></li>
                     <li><a href="{% url 'records' %}">Records</a></li>
                     <li><a href="{% url 'archive' %}">Archives</a></li>
+
+                    <li><a href="{% url 'add-sample' %}">Add Sample</a></li>
                     <!-- Pages you want to have links to. -->
                 </ul>
                 {% endblock %}
