Updated archive page with new list page links

--- a/DataMan/Records/templates/archive.html
+++ b/DataMan/Records/templates/archive.html
@@ -2,11 +2,7 @@
 
 {% block content %}
 <h1>Archives</h1>
-<p>
-    Placeholder<br>
-    eventual list<br>
-    of cool things.
-    <br><br><br>
-    <a href="{% url 'samples' %}">Samples</a>
-</p>
+<li><a href="{% url 'experiments' %}">Experiments</a></li>
+<li><a href="{% url 'samples' %}">Samples</a></li>
+<li><a href="{% url 'datasets' %}">Datasets</a></li>
 {% endblock %}
