--- a/DataMan/Records/templates/dataset_list.html
+++ b/DataMan/Records/templates/dataset_list.html
@@ -3,7 +3,7 @@
 {% extends "generic.html" %}
 
 {% block content %}
-<h1>DataSet</h1>
+<h1>Dataset</h1>
     {% if Dataset_list %}
 <ul>
     {% for Dataset in Dataset_list %}
