--- a/DataMan/Records/templates/Records/dataset_list.html
+++ b/DataMan/Records/templates/Records/dataset_list.html
@@ -4,9 +4,9 @@
 
 {% block content %}
 <h1>Dataset</h1>
-    {% if Dataset_list %}
+    {% if dataset_list %}
 <ul>
-    {% for Dataset in Dataset_list %}
+    {% for Dataset in dataset_list %}
     <li>
         <a href="{% url 'dataset-detail' Dataset.datasetID %}"> {{ Dataset }}</a>
     </li>
