--- a/DataMan/Records/templates/Records/experiment_list.html
+++ b/DataMan/Records/templates/Records/experiment_list.html
@@ -6,7 +6,7 @@
 <h1>Experiment</h1>
     {% if experiment_list %}
 <ul>
-    {% for Experiment in Experiment_list %}
+    {% for Experiment in experiment_list %}
     <li>
         <a href="{% url 'experiment-detail' Experiment.experimentID %}"> {{ Experiment }}</a>
     </li>
