Add dataset page added

--- a/DataMan/Records/templates/Records/sample_detail.html
+++ b/DataMan/Records/templates/Records/sample_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>Sample {{ sample }}</h2>
 <p>We will eventually put more data in here.</p>
-<p><Strong>Color:</Strong> {{sample.name}} </p>
+<p><Strong>ID:</Strong> {{sample.sampleID}} </p>
 <!--{% if sample.otherStuff != "" %}
 <p>{{sample.otherStuff}}</p>
   {% endif %} -->
