--- a/DataMan/Records/templates/archive.html
+++ b/DataMan/Records/templates/archive.html
@@ -5,4 +5,6 @@
 <li><a href="{% url 'experiments' %}">Experiments</a></li>
 <li><a href="{% url 'samples' %}">Samples</a></li>
 <li><a href="{% url 'datasets' %}">Datasets</a></li>
+<li><br></li>
+<li><a href="{% url 'add-sample' %}">Add Sample</a></li>
 {% endblock %}
