--- a/DataMan/Records/templates/add-sample.html
+++ b/DataMan/Records/templates/add-sample.html
@@ -4,10 +4,10 @@
 {% extends "generic.html" %}
 
 {% block content %}
-  <h1>Add Sample</h1>
+  <h1>Add {{model}}</h1>
   <form action="" method="post">
       {% csrf_token %}
-      <table>
+      <table border="1">
       {{form.as_table}}
       </table>
       <input type="submit" value="Submit">
