--- a/DataMan/Records/templates/generic.html
+++ b/DataMan/Records/templates/generic.html
@@ -25,7 +25,7 @@
         <a href="javascript: void 0">About</a>
     </byu-menu>
     <div class="content">
-        <div>{% block content %}{% endblock %}</div>
+        {% block content %}{% endblock %}
     </div>
     <byu-footer></byu-footer>
 </body>
