--- a/DataMan/Records/templates/records.html
+++ b/DataMan/Records/templates/records.html
@@ -1,8 +1,32 @@
 {% extends "generic.html" %}
-
+{% load staticfiles%}
 {% block content %}
-<h1>Records</h1>
-<p>
-    Placeholder
-</p>
+<link rel="stylesheet" href="{% static '/css/home.css' %}" />
+<div class="banner">
+    <img src="{% static 'images/digitale-welt.jpg' %}">
+</div>
+<h2 class="banner-title">Data Management</h2>
+<div class="nav-block">
+    <h3 class="nav-block__title">View Data</h3>
+    <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+        <path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z">
+        </path>
+    </svg>
+</div>
+<div class="nav-block">
+    <h3 class="nav-block__title">Add Data</h3>
+    <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+        <path fill="currentColor" d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z">
+        </path>
+    </svg>
+</div>
+<!-- <a href=""> -->
+    <div class="nav-block">
+        <h3 class="nav-block__title">Upload Data</h3>
+        <svg class="nav-block__icon"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+            <path fill="currentColor" d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm65.18 216.01H224v80c0 8.84-7.16 16-16 16h-32c-8.84 0-16-7.16-16-16v-80H94.82c-14.28 0-21.41-17.29-11.27-27.36l96.42-95.7c6.65-6.61 17.39-6.61 24.04 0l96.42 95.7c10.15 10.07 3.03 27.36-11.25 27.36zM377 105L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128v-6.1c0-6.3-2.5-12.4-7-16.9z">
+        </path>
+        </svg>
+    </div>
+<!-- </a> -->
 {% endblock %}
