created basic archive page which can display all 3 types of data

--- a/DataMan/Records/static/css/general.css
+++ b/DataMan/Records/static/css/general.css
@@ -2,10 +2,14 @@ body {
     min-height: 100vh;
     display: grid;
     grid-template-rows: 58px 35px auto 78px;
+    color: #002e5d;
 }
 .content {
     width: 80%;
     margin-left: 10%;
     margin-right: 10%;
     font-family: HCo Ringside Narrow SSm,Arial,sans-serif;
+}
+a {
+    text-decoration: none;
 }
