--- a/DataMan/Records/templates/generic.html
+++ b/DataMan/Records/templates/generic.html
@@ -21,7 +21,7 @@
         <!-- <a href="javascript: void 0" class="active">Home</a> -->
         <a href="{% url 'records' %}">Home</a>
         <a href="{% url 'archive' %}">Archive</a>
-        <a href="javascript: void 0">Create New</a>
+        <a href="{% url 'create-new' %}">Create New</a>
         <a href="javascript: void 0">About</a>
     </byu-menu>
     <div class="content">
