--- a/DataMan/Records/templates/add-record.html
+++ b/DataMan/Records/templates/add-record.html
@@ -2,14 +2,16 @@
     Page for adding samples.-->
  
 {% extends "generic.html" %}
+{% load staticfiles%}
 
 {% block content %}
+  <link rel="stylesheet" href="{% static '/css/add.css' %}" />
   <h1>Add {{model}}</h1>
   <form action="" method="post">
       {% csrf_token %}
-      <table border="1">
+      <table>
       {{form.as_table}}
       </table>
-      <input type="submit" value="Submit">
+      <input class="nav-block" type="submit" value="Submit"/>
   </form>
 {% endblock %}
