--- a/DataMan/Records/templates/generic.html
+++ b/DataMan/Records/templates/generic.html
@@ -22,7 +22,7 @@
         <a href="{% url 'records' %}">Home</a>
         <a href="{% url 'archive' %}">Archive</a>
         <a href="{% url 'create-new' %}">Create New</a>
-        <a href="javascript: void 0">About</a>
+        <a href="{% url 'about' %}">About</a>
     </byu-menu>
     <div class="content">
         {% block content %}{% endblock %}
