added framework of about page and made a cool submit button on the add page

--- a/DataMan/Records/templates/about.html
+++ b/DataMan/Records/templates/about.html
@@ -4,5 +4,5 @@
 {% block content %}
   <link rel="stylesheet" href="{% static '/css/about.css' %}" />
   <h1>About</h1>
-  <body>This lab is about data management.</body>
+  <body>This website is about data management.</body>
 {% endblock %}
