--- a/DataMan/Records/templates/create-new.html
+++ b/DataMan/Records/templates/create-new.html
@@ -5,44 +5,26 @@
     <link rel="stylesheet" href="{% static '/css/archive.css' %}" />
     <h1>CREATE NEW</h1>
 
-    {% if show_table %}
-        <a class="nav-block" href="http://127.0.0.1:8000/records/experiments/add/?type=experiments">
-            <h3 class="nav-block__title">Add Experiment</h3>
-            <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                <path fill="currentColor" d="M437.2 403.5L320 215V64h8c13.3 0 24-10.7 24-24V24c0-13.3-10.7-24-24-24H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h8v151L10.8 403.5C-18.5 450.6 15.3 512 70.9 512h306.2c55.7 0 89.4-61.5 60.1-108.5zM137.9 320l48.2-77.6c3.7-5.2 5.8-11.6 5.8-18.4V64h64v160c0 6.9 2.2 13.2 5.8 18.4l48.2 77.6h-172z">
-                </path>
-            </svg>
-        </a>
-        <a class="nav-block" href="http://127.0.0.1:8000/records/samples/add/?type=samples">
-            <h3 class="nav-block__title">Add Sample</h3>
-            <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512">
-                <path fill="currentColor" d="M477.7 186.1L309.5 18.3c-3.1-3.1-8.2-3.1-11.3 0l-34 33.9c-3.1 3.1-3.1 8.2 0 11.3l11.2 11.1L33 316.5c-38.8 38.7-45.1 102-9.4 143.5 20.6 24 49.5 36 78.4 35.9 26.4 0 52.8-10 72.9-30.1l246.3-245.7 11.2 11.1c3.1 3.1 8.2 3.1 11.3 0l34-33.9c3.1-3 3.1-8.1 0-11.2zM318 256H161l148-147.7 78.5 78.3L318 256z">
-                </path>
-            </svg>
-        </a>
-        <a class="nav-block" href="http://127.0.0.1:8000/records/datasets/add/?type=datasets">
-            <h3 class="nav-block__title">Add Dataset</h3>
-            <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                <path fill="currentColor" d="M464 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zM224 416H64v-96h160v96zm0-160H64v-96h160v96zm224 160H288v-96h160v96zm0-160H288v-96h160v96z">
-                </path>
-            </svg>
-        </a>
-    {% else %}
-        <div class="table-outer">
-            <table>
-                <tr>
-                    {% for name in col_names %}
-                        <th>{{ name }}</th>
-                    {% endfor %}
-                </tr>
-                {% for item in query_results %}
-                    <tr>
-                        {% for val in item.values %}
-                            <td>{{ val }}</td>
-                        {% endfor %}
-                    </tr>
-                {% endfor %}
-            </table>
-        </div>
-    {% endif %}
+
+    <a class="nav-block" href="{% url 'add-experiment' %}">
+        <h3 class="nav-block__title">Add Experiment</h3>
+        <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+            <path fill="currentColor" d="M437.2 403.5L320 215V64h8c13.3 0 24-10.7 24-24V24c0-13.3-10.7-24-24-24H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h8v151L10.8 403.5C-18.5 450.6 15.3 512 70.9 512h306.2c55.7 0 89.4-61.5 60.1-108.5zM137.9 320l48.2-77.6c3.7-5.2 5.8-11.6 5.8-18.4V64h64v160c0 6.9 2.2 13.2 5.8 18.4l48.2 77.6h-172z">
+            </path>
+        </svg>
+    </a>
+    <a class="nav-block" href="{% url 'add-sample' %}">
+        <h3 class="nav-block__title">Add Sample</h3>
+        <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512">
+            <path fill="currentColor" d="M477.7 186.1L309.5 18.3c-3.1-3.1-8.2-3.1-11.3 0l-34 33.9c-3.1 3.1-3.1 8.2 0 11.3l11.2 11.1L33 316.5c-38.8 38.7-45.1 102-9.4 143.5 20.6 24 49.5 36 78.4 35.9 26.4 0 52.8-10 72.9-30.1l246.3-245.7 11.2 11.1c3.1 3.1 8.2 3.1 11.3 0l34-33.9c3.1-3 3.1-8.1 0-11.2zM318 256H161l148-147.7 78.5 78.3L318 256z">
+            </path>
+        </svg>
+    </a>
+    <a class="nav-block" href="{% url 'add-dataset' %}">
+        <h3 class="nav-block__title">Add Dataset</h3>
+        <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <path fill="currentColor" d="M464 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zM224 416H64v-96h160v96zm0-160H64v-96h160v96zm224 160H288v-96h160v96zm0-160H288v-96h160v96z">
+            </path>
+        </svg>
+    </a>
 {% endblock %}
