edited add pages

--- a/DataMan/Records/static/css/add.css
+++ b/DataMan/Records/static/css/add.css
@@ -16,7 +16,12 @@ h1{
 }
 
 li {
-    font-size: 0px;
+    font-size: 12px;
+}
+
+byu-menu.byu-component-rendered {
+    position: sticky;
+    top: 0px;
 }
 
 table {
