made byu menu sticky and temporarily brought back "*this field is required"

--- a/DataMan/Records/static/css/general.css
+++ b/DataMan/Records/static/css/general.css
@@ -13,3 +13,9 @@ body {
 a {
     text-decoration: none;
 }
+
+byu-menu.byu-component-rendered {
+    position: sticky;
+    top: 0px;
+    background-color: #FEFEFE;
+}
