--- a/DataMan/Records/templates/Records/experiment_list.html
+++ b/DataMan/Records/templates/Records/experiment_list.html
@@ -1,19 +1,1 @@
-
-
-{% extends "generic.html" %}
-
-{% block content %}
-<h1>Experiment</h1>
-    {% if experiment_list %}
-<ul>
-    {% for Experiment in experiment_list %}
-    <li>
-        <a href="{% url 'experiment-detail' Experiment.experimentID %}"> {{ Experiment }}</a>
-    </li>
-    {% endfor %}
-</ul>
-    {% else %}
-<p>No experiments found.</p>
-    {% endif %}
-{% endblock %}
-
+{% extends "table_list.html" %}
