--- a/DataMan/Records/templates/Records/sample_list.html
+++ b/DataMan/Records/templates/Records/sample_list.html
@@ -1,19 +1,1 @@
-
-
-{% extends "generic.html" %}
-
-{% block content %}
-    <h1>Samples</h1>
-    {% if sample_list %}
-    <ul>
-        {% for Sample in sample_list %}
-          <li>
-            <a href="{% url 'sample-detail' Sample.sampleID %}"> {{ Sample }}</a>
-          </li>
-        {% endfor %}
-    </ul>
-    {% else %}
-        <p>No samples found.</p>
-    {% endif %}
-{% endblock %}
-
+{% extends "table_list.html" %}
