--- a/DataMan/Records/templates/add-record.html
+++ b/DataMan/Records/templates/add-record.html
@@ -1,6 +1,6 @@
-<!--add-sample.html 
+<!--add-sample.html
     Page for adding samples.-->
- 
+
 {% extends "generic.html" %}
 {% load staticfiles%}
 
@@ -9,9 +9,15 @@
   <h1>Add {{model}}</h1>
   <form action="" method="post">
       {% csrf_token %}
-      <p>
-      {{form.as_p}}
-      </p>
+      {% for field in form %}
+        <p class="form-title">{{ field.label }}</p>
+        {% for error in field.errors %}
+            {% if error != 'This field is required.' %}
+                <p class="form-error">{{ error }}</p>
+            {% endif %}
+        {% endfor%}
+        {{ field }}
+      {% endfor %}
       <input class="nav-block" type="submit" value="Submit"/>
   </form>
 {% endblock %}
