Edited about page to make it slightly more informative, feel free to add more or less

--- a/DataMan/Records/templates/about.html
+++ b/DataMan/Records/templates/about.html
@@ -4,5 +4,15 @@
 {% block content %}
   <link rel="stylesheet" href="{% static '/css/about.css' %}" />
   <h1>About</h1>
-  <body>This website is about data management.</body>
+  <body>The purpose of this website is to compile data into one easy to access location.  <br>
+  While the site allows users to create datasets and samples that are not linked to a respective experiment, we ask <br>
+  that, if possible, our users keep all data linked for organization purposes.<br><br><br><br><br>
+  Created by Team Single Cell
+  <ul>
+      <li>Michaela McCown</li>
+      <li>Zachary Olivier</li>
+      <li>Michael Bradshaw</li>
+  </ul>
+  </body>
+
 {% endblock %}
