--- a/DataMan/Records/templates/Records/experiment_detail.html
+++ b/DataMan/Records/templates/Records/experiment_detail.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <h2>{{ experiment }}</h2>
-<p><Strong>Experiment ID:</Strong> {{experiment.experimentID}} </p>
 <p><Strong>Project Lead:</Strong> {{experiment.projectLead}} </p>
+<p>    Team Members: {{experiment.teamMembers}}</p>
 <p><Strong>IRB Number:</Strong> {{experiment.IRB}} </p>
 <p><Strong>Experimental Design:</Strong> {{experiment.experimentalDesign}} </p>
 <p><Strong><a href="{% url 'edit-experiment' experiment.experimentID %}">Edit</a></Strong></p>
