--- a/DataMan/Records/static/css/add.css
+++ b/DataMan/Records/static/css/add.css
@@ -4,13 +4,10 @@
     grid-template-columns: 1fr 1fr 1fr;
 }
 body {
-    min-height: 180vh;
-    display: grid;
-    grid-template-rows: 58px 35px auto 78px;
-    color: #002e5d;
+
 }
 
-h1{
+.add-header{
         grid-column: 1/4;
         text-transform: uppercase;
 }
@@ -76,4 +73,6 @@ input {
     height: 40px;
 }
 
-
+form {
+    grid-row: 2/4;
+}
