--- a/DataMan/Records/templates/add-record.html
+++ b/DataMan/Records/templates/add-record.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <link rel="stylesheet" href="{% static '/css/add.css' %}" />
-  <h1>{{header}}</h1>
+  <h1 class="add-header">{{header}}</h1>
   <form action="" method="post">
       {% csrf_token %}
       {% for field in form %}
