Status Options, fields made nullable

--- a/DataMan/Records/templates/add-record-bulk.html
+++ b/DataMan/Records/templates/add-record-bulk.html
@@ -4,6 +4,8 @@
 {% extends "generic.html" %}
 {% load staticfiles%}
 
+
+<!--THIS IS NOT DOING ANYTHING YET-->
 {% block content %}
   <link rel="stylesheet" href="{% static '/css/add.css' %}" />
   <h1>{{header}}</h1>
