--- a/DataMan/Records/templates/add-record-bulk.html
+++ b/DataMan/Records/templates/add-record-bulk.html
@@ -9,22 +9,5 @@
 {% block content %}
   <link rel="stylesheet" href="{% static '/css/add.css' %}" />
   <h1>{{header}}</h1>
-  <form action="" method="post"enctype="multipart/form-data">
-      {% csrf_token %}
-      {{formset.management_form}}
-      {% for form in formset.forms %}
-        <ul class="addrecordlist">
-          {% for field in form %}
-            <li class="form-title">{{ field.label }}</li>
-            {% for error in field.errors %}
-              {% if error != 'This field is required.' %}
-                <li class="form-error">{{ error }}</li>
-              {% endif %}
-            {% endfor%}
-          {{ field }}
-        </ul>
-      {% endfor %}
-      {% endfor %}
-      <input class="nav-block" type="submit" value="Submit"/>
-  </form>
+  <p>{{form.as_table}}</p>
 {% endblock %}
