Upload page edited

--- a/DataMan/Records/templates/upload.html
+++ b/DataMan/Records/templates/upload.html
@@ -7,4 +7,6 @@
 <link rel="stylesheet" href="{% static '/css/archive.css' %}" />
 <h1>UPLOAD DATA</h1>
 {{form}}
+<br><br>
+<input type="submit" value="Submit" />
 {% endblock %}
