--- a/DataMan/Records/templates/upload.html
+++ b/DataMan/Records/templates/upload.html
@@ -8,7 +8,7 @@
 <h1>UPLOAD DATA</h1>
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <!--<p><a href="{% static 'download-template.html' %}"> Download Template </a></p> -->
+    <p><a href="{% static 'download-template.xlsx' %}"> Download Template </a></p>
     {% for field in form %}
       <p class="form-title">{{ field.label }}</p>
       {% for error in field.errors %}
