Added upload tab

--- a/DataMan/Records/templates/generic.html
+++ b/DataMan/Records/templates/generic.html
@@ -22,6 +22,7 @@
         <a href="{% url 'records' %}">Home</a>
         <a href="{% url 'archive' %}">Archive</a>
         <a href="{% url 'create-new' %}">Create New</a>
+        <a href="{% url 'upload' %}">Upload</a>
         <a href="{% url 'about' %}">About</a>
     </byu-menu>
     <div class="content">
