--- a/DataMan/Records/static/css/upload.css
+++ b/DataMan/Records/static/css/upload.css
@@ -11,7 +11,6 @@ h1{
     height: 40px;
     border-radius: 10px;
     margin: auto;
-    display: grid;
     transition: top .3s linear;
     position: relative;
     top: 0;
@@ -31,10 +30,9 @@ h1{
 
 a.nav-block {
     width: 160px;
-    background: #002e5d;
     color: #FEFEFE;
     background: #BABABA;
-    display: grid;
+    display: inline-block;
 }
 input.nav-block {
     width: 80px;
