Added upload feedback

--- a/DataMan/Records/templates/Records/sample_detail.html
+++ b/DataMan/Records/templates/Records/sample_detail.html
@@ -8,6 +8,12 @@
 <p><Strong>Storage Condition:</Strong> {{sample.storageCondition}}</p>
 <p><Strong>Storage Location:</Strong> {{sample.storageLocation}}</p>
 <p><Strong>Treatment Protocol:</Strong> {{sample.treatmentProtocol}}</p>
+  <ul>
+      {% if sample.treatmentProtocol.description %}
+        <li>Protocol Description: {{sample.treatmentProtocol.description}}</li>
+      {%endif%}
+      {% if sample.treatmentProtocol.file %}<li>File: {{sample.treatmentProtocol.file}}</li>{%endif%}
+  </ul>
 <p><Strong>Date Created:</Strong> {{sample.dateCreated|date:'M d, Y'}}</p>
 <p><Strong>Organism:</Strong> {{sample.organism}}</p>
 <p><Strong>Organism Modifications:</Strong> {{sample.organismModifications}}</p>
