Individuals icon on Archive page

--- a/DataMan/Records/templates/generic.html
+++ b/DataMan/Records/templates/generic.html
@@ -21,7 +21,7 @@
         <!-- <a href="javascript: void 0" class="active">Home</a> -->
         <a href="{% url 'records' %}">Home</a>
         <a href="{% url 'archive' %}">Archive</a>
-        <a href="{% url 'create-new' %}">Create New</a>
+        <a href="{% url 'create-new' %}">New Record</a>
         <a href="{% url 'upload' %}">Upload</a>
         <a href="{% url 'about' %}">About</a>
     </byu-menu>
