--- a/DataMan/Records/static/css/archive.css
+++ b/DataMan/Records/static/css/archive.css
@@ -1,10 +1,10 @@
 .content {
     display: grid;
     grid-template-rows: 100px 400px auto;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 h1{
-        grid-column: 1/4;
+        grid-column: 1/5;
         text-transform: uppercase;
 }
 .nav-block {
