--- a/DataMan/Records/templates/archive.html
+++ b/DataMan/Records/templates/archive.html
@@ -7,28 +7,28 @@
 
     {% if show_table %}
 <a class="nav-block" href="{% url 'experiments' %}">
-    <h3 class="nav-block__title">View Experiments</h3>
+    <h3 class="nav-block__title">Experiments</h3>
     <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
         <path fill="currentColor" d="M437.2 403.5L320 215V64h8c13.3 0 24-10.7 24-24V24c0-13.3-10.7-24-24-24H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h8v151L10.8 403.5C-18.5 450.6 15.3 512 70.9 512h306.2c55.7 0 89.4-61.5 60.1-108.5zM137.9 320l48.2-77.6c3.7-5.2 5.8-11.6 5.8-18.4V64h64v160c0 6.9 2.2 13.2 5.8 18.4l48.2 77.6h-172z">
         </path>
     </svg>
 </a>
 <a class="nav-block" href="{% url 'individuals' %}">
-    <h3 class="nav-block__title">View Patients</h3>
-    <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512">
-        <path fill="currentColor" d="M477.7 186.1L309.5 18.3c-3.1-3.1-8.2-3.1-11.3 0l-34 33.9c-3.1 3.1-3.1 8.2 0 11.3l11.2 11.1L33 316.5c-38.8 38.7-45.1 102-9.4 143.5 20.6 24 49.5 36 78.4 35.9 26.4 0 52.8-10 72.9-30.1l246.3-245.7 11.2 11.1c3.1 3.1 8.2 3.1 11.3 0l34-33.9c3.1-3 3.1-8.1 0-11.2zM318 256H161l148-147.7 78.5 78.3L318 256z">
+    <h3 class="nav-block__title">Individuals</h3>
+    <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512">
+        <path fill="currentColor" d="M96 0c35.346 0 64 28.654 64 64s-28.654 64-64 64-64-28.654-64-64S60.654 0 96 0m48 144h-11.36c-22.711 10.443-49.59 10.894-73.28 0H48c-26.51 0-48 21.49-48 48v136c0 13.255 10.745 24 24 24h16v136c0 13.255 10.745 24 24 24h64c13.255 0 24-10.745 24-24V352h16c13.255 0 24-10.745 24-24V192c0-26.51-21.49-48-48-48z">
         </path>
     </svg>
 </a>
 <a class="nav-block" href="{% url 'samples' %}">
-    <h3 class="nav-block__title">View Samples</h3>
+    <h3 class="nav-block__title">Samples</h3>
     <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512">
         <path fill="currentColor" d="M477.7 186.1L309.5 18.3c-3.1-3.1-8.2-3.1-11.3 0l-34 33.9c-3.1 3.1-3.1 8.2 0 11.3l11.2 11.1L33 316.5c-38.8 38.7-45.1 102-9.4 143.5 20.6 24 49.5 36 78.4 35.9 26.4 0 52.8-10 72.9-30.1l246.3-245.7 11.2 11.1c3.1 3.1 8.2 3.1 11.3 0l34-33.9c3.1-3 3.1-8.1 0-11.2zM318 256H161l148-147.7 78.5 78.3L318 256z">
         </path>
     </svg>
 </a>
 <a class="nav-block" href="{% url 'datasets' %}">
-    <h3 class="nav-block__title">View Datasets</h3>
+    <h3 class="nav-block__title">Datasets</h3>
     <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
         <path fill="currentColor" d="M464 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zM224 416H64v-96h160v96zm0-160H64v-96h160v96zm224 160H288v-96h160v96zm0-160H288v-96h160v96z">
         </path>
