Added variable field input interpreter

--- a/DataMan/Records/templates/about.html
+++ b/DataMan/Records/templates/about.html
@@ -14,4 +14,7 @@
   </ul>
   </body>
 
+
+<p>Icon graphics used are from FontAwesome, which are licensed under the Creative Commons Attribution 4.0 International license. </p>
+
 {% endblock %}
