--- a/DataMan/Records/templates/upload.html
+++ b/DataMan/Records/templates/upload.html
@@ -10,7 +10,12 @@
     {% csrf_token %}
     <a class="nav-block" href="{% static 'download-template.xlsx' %}">
             <p class="nav-block__title"> Download Template</p>
-    </a>
+    </a><!--
+    <br>
+    <br>
+    <a class="nav-block" href="{% static 'generic-template.xlsx' %}">
+        <p class="nav-block__title"> Download Template</p> 
+    </a><!---->
     {% for field in form %}
       <p class="form-title">{{ field.label }}</p>
       {% for error in field.errors %}
