--- a/DataMan/Records/templates/create-new.html
+++ b/DataMan/Records/templates/create-new.html
@@ -14,9 +14,9 @@
         </svg>
     </a>
     <a class="nav-block" href="{% url 'add-individual' %}">
-        <h3 class="nav-block__title">Add Patient</h3>
-        <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 512">
-            <path fill="currentColor" d="M477.7 186.1L309.5 18.3c-3.1-3.1-8.2-3.1-11.3 0l-34 33.9c-3.1 3.1-3.1 8.2 0 11.3l11.2 11.1L33 316.5c-38.8 38.7-45.1 102-9.4 143.5 20.6 24 49.5 36 78.4 35.9 26.4 0 52.8-10 72.9-30.1l246.3-245.7 11.2 11.1c3.1 3.1 8.2 3.1 11.3 0l34-33.9c3.1-3 3.1-8.1 0-11.2zM318 256H161l148-147.7 78.5 78.3L318 256z">
+        <h3 class="nav-block__title">Add Individual</h3>
+        <svg class="nav-block__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512">
+            <path fill="currentColor" d="M96 0c35.346 0 64 28.654 64 64s-28.654 64-64 64-64-28.654-64-64S60.654 0 96 0m48 144h-11.36c-22.711 10.443-49.59 10.894-73.28 0H48c-26.51 0-48 21.49-48 48v136c0 13.255 10.745 24 24 24h16v136c0 13.255 10.745 24 24 24h64c13.255 0 24-10.745 24-24V352h16c13.255 0 24-10.745 24-24V192c0-26.51-21.49-48-48-48z">
             </path>
         </svg>
     </a><!--Change the css from 3 per screen to 4 or auto adjust. -->
