--- a/DataMan/Records/static/css/upload.css
+++ b/DataMan/Records/static/css/upload.css
@@ -1,7 +1,8 @@
 .content {
     display: grid;
-    grid-template-rows: 100px 400px auto;
+    grid-template-rows: 100px auto auto;
     grid-template-columns: 1fr 1fr 1fr;
+    padding-bottom: 20px;
 }
 h1{
         grid-column: 1/4;
