--- a/DataMan/Records/templates/Records/experiment_detail.html
+++ b/DataMan/Records/templates/Records/experiment_detail.html
@@ -6,6 +6,9 @@
 <p>    Team Members: {{experiment.teamMembers}}</p>
 <p><Strong>IRB Number:</Strong> {{experiment.IRB}} </p>
 <p><Strong>Experimental Design:</Strong> {{experiment.experimentalDesign}} </p>
+<!--<a class="nav-block" href="{% url 'edit-experiment' experiment.experimentID %}">
+    <p class="nav-block__title">Edit</p>
+</a>-->
 <p><Strong><a href="{% url 'edit-experiment' experiment.experimentID %}">Edit</a></Strong></p>
 {% if experiment.sample_set.all.count != 0 %}
     <Strong>Samples:</Strong>
