--- a/DataMan/Records/static/css/archive.css
+++ b/DataMan/Records/static/css/archive.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-rows: 100px auto auto;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding-bottom: 20px;
 }
 h1{
         grid-column: 1/5;
