Bug fixes in upload page

--- a/DataMan/Records/templates/Records/dataset_detail.html
+++ b/DataMan/Records/templates/Records/dataset_detail.html
@@ -28,8 +28,8 @@
 <p><Strong>Status:</Strong> {{dataset.status}}</p>
 
 <p><Strong>Date Created:</Strong> {{dataset.dateCreated|date:'M d, Y'}}</p>
-<p><Strong>Acquisition Start:</Strong> {{dataset.acquisitionStart|date:'M d, Y'}}</p>
-<p><Strong>Acquisition End:</Strong> {{dataset.acquisitionEnd|date:'M d, Y'}}</p>
+<p><Strong>Upload Date:</Strong> {{dataset.acquisitionStart|date:'M d, Y'}}</p>
+<!--<p><Strong>Acquisition End:</Strong> {{dataset.acquisitionEnd|date:'M d, Y'}}</p>-->
 
 <p><Strong>File Name:</Strong> {{dataset.fileName}}</p>
 <p><Strong>File Location:</Strong> {{dataset.fileLocation}}</p>
